modified DTOs. added proper DTO